--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.0"
@@ -18,6 +20,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
 
     }
 }
