--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,9 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation 'com.google.code.gson:gson:2.8.6'
 
+
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.3'//0-alpha-22'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.3'
+    implementation 'com.blankj:swipe-panel:1.0'
+    implementation "com.blankj:utilcode:1.21.2"
 }
