--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,11 @@ buildscript {
         google()
         mavenCentral()
 
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+
+
+
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.0"
@@ -21,7 +25,11 @@ allprojects {
         google()
         mavenCentral()
 
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+
+
+
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
 
     }
 }
