--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -55,9 +59,5 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation 'com.google.code.gson:gson:2.8.6'
 
-
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.3'//0-alpha-22'
-    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.3'
-    implementation 'com.blankj:swipe-panel:1.0'
-    implementation "com.blankj:utilcode:1.21.2"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
