--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,12 @@ buildscript {
         google()
         mavenCentral()
 
-
+        maven{
+            url "https://oss.sonatype.org/content/groups/public"
+        }
+        maven {
+            url "https://jitpack.io"
+        }
 
 
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -14,7 +19,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,7 +30,12 @@ allprojects {
         google()
         mavenCentral()
 
-
+        maven{
+            url "https://oss.sonatype.org/content/groups/public"
+        }
+        maven {
+            url "https://jitpack.io"
+        }
 
 
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
